--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -703,7 +703,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "c7a28c02-0817-4894-b4d5-240fb7c63012"
+        "outputId": "32130ef3-2b1f-4de4-c31c-74611b2c554e"
       },
       "cell_type": "code",
       "source": [
@@ -711,7 +711,7 @@
         "a = a.reshape(3,4)\n",
         "a"
       ],
-      "execution_count": 22,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -725,7 +725,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 38
         }
       ]
     },
@@ -737,14 +737,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 86
         },
-        "outputId": "c73e45d5-c570-4b68-a7b3-62c26a827a04"
+        "outputId": "9743295c-a14a-444a-8c4b-b0488ce6311f"
       },
       "cell_type": "code",
       "source": [
         "a = a.reshape(4,-1)\n",
         "a"
       ],
-      "execution_count": 23,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -759,7 +759,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 39
         }
       ]
     },
@@ -771,14 +771,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "08c3d1eb-2544-4184-eb38-09dbad5d096e"
+        "outputId": "ede4d384-6f7d-4b43-ab72-19051f050a41"
       },
       "cell_type": "code",
       "source": [
         "a = a.reshape(-1)\n",
         "a"
       ],
-      "execution_count": 31,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -790,7 +790,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 40
         }
       ]
     },
@@ -802,7 +802,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 121
         },
-        "outputId": "f28896f9-da86-406f-b5e0-8f61fea36c95"
+        "outputId": "815b38a3-f3a0-43a5-a0a3-06971f7f6d32"
       },
       "cell_type": "code",
       "source": [
@@ -810,7 +810,7 @@
         "a = a.transpose()\n",
         "a"
       ],
-      "execution_count": 33,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -827,8 +827,78 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 41
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "mp2vfNUuKDcn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1bf45351-576f-478b-ee39-5fc5cb4fce3c"
+      },
+      "cell_type": "code",
+      "source": [
+        "a[1,:]"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2, 8])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "2v2v2D1fJ7vd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2d400d77-2132-4da9-d311-024c39395c19"
+      },
+      "cell_type": "code",
+      "source": [
+        "a[:,1]"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 7,  8,  9, 10, 11, 12])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "LBpzWFQbJmZR",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# Matrix Multiplication"
       ]
     },
     {
@@ -837,32 +907,31 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 121
+          "height": 69
         },
-        "outputId": "b802f055-0c02-4468-8623-1a48aeb9cad7"
+        "outputId": "8dc3efcb-0729-4904-b3fd-4bd331cd2418"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "a = np.arange(1, 7).reshape(3, 2)\n",
+        "b = np.arange(1, 9).reshape(2, 4)\n",
+        "np.dot(a, b)"
       ],
-      "execution_count": 29,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 1,  7],\n",
-              "       [ 2,  8],\n",
-              "       [ 3,  9],\n",
-              "       [ 4, 10],\n",
-              "       [ 5, 11],\n",
-              "       [ 6, 12]])"
+              "array([[11, 14, 17, 20],\n",
+              "       [23, 30, 37, 44],\n",
+              "       [35, 46, 57, 68]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 44
         }
       ]
     },
