--- a/keras/CNN_cifar10.ipynb
+++ b/keras/CNN_cifar10.ipynb
@@ -42,7 +42,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "ED-QrdUsQP-P",
-        "outputId": "2698c966-2033-49da-93aa-046053106d9a",
+        "outputId": "68dd2cc3-96ab-431c-ce56-7d225e560d0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -56,7 +56,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "UnqPnOyhQP-Y",
-        "outputId": "8858a281-20bb-47b6-e86a-69516746b794",
+        "outputId": "773e4ec1-9c46-456e-92a9-cf71ff989eda",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -96,7 +96,7 @@
       "source": [
         "train_images.shape"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -116,7 +116,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "bsskO8qrQP-c",
-        "outputId": "374fc8df-b2cf-4499-aea5-168addeb20c4",
+        "outputId": "6559dae7-e56e-44f4-db3a-d0ec8271a49c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -126,7 +126,7 @@
       "source": [
         "set(i[0] for i in list(train_labels)) "
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,7 +160,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Vij1asXWQP-j",
-        "outputId": "cf5b0702-9526-4a90-a538-3da5d3be7001",
+        "outputId": "71cb62a4-086d-48ab-d954-d734467787de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 347
@@ -173,7 +173,7 @@
         "plt.colorbar()\n",
         "plt.grid(False)"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -207,7 +207,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "VQKxg_htQP-q",
-        "outputId": "b3f3e518-93b4-4c77-f886-1600ef14d025",
+        "outputId": "40350e7b-0a24-450a-d41d-0a3c50f19319",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 589
@@ -224,7 +224,7 @@
         "    plt.imshow(train_images[i], cmap=plt.cm.binary)\n",
         "    plt.xlabel(class_names[train_labels[i][0]])     "
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -254,18 +254,14 @@
       "metadata": {
         "colab_type": "code",
         "id": "ylnwOdPuQP-v",
-        "outputId": "efaa7b96-c152-4a28-dbce-b4e3b87ed91c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "from keras.layers import *\n",
         "\n",
         "model = keras.Sequential([\n",
-        "        Convolution2D(32, (3,3), activation='relu', padding='same', input_shape=(32,32,3)),\n",
+        "        Convolution2D(32, (3,3), activation='relu', padding='same',), # input_shape=(32,32,3)),\n",
         "        Convolution2D(32, (3,3), activation='relu', padding='same',),\n",
         "        MaxPooling2D(pool_size=(2,2)),\n",
         "        BatchNormalization(),\n",
@@ -292,26 +288,17 @@
         "]) "
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Colocations handled automatically by placer.\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
         "colab_type": "code",
         "id": "g54tLIERQP-z",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        },
+        "outputId": "d33aae5f-55a2-4fed-efe9-4cbc4ccfa129"
       },
       "cell_type": "code",
       "source": [
@@ -319,8 +306,18 @@
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Colocations handled automatically by placer.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -340,84 +337,87 @@
       "metadata": {
         "colab_type": "code",
         "id": "nbmW7YMtQP-6",
-        "outputId": "ae48c05b-ba6a-4572-e523-aff5284b92bd",
+        "outputId": "eda6ed70-def4-4d20-dd6f-3988f8cd4cfb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1143
+          "height": 1195
         }
       },
       "cell_type": "code",
       "source": [
         "model.fit(train_images, train_labels, batch_size=32, epochs=30)  "
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
             "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use tf.cast instead.\n",
             "Epoch 1/30\n",
-            "50000/50000 [==============================] - 45s 892us/step - loss: 1.4399 - acc: 0.4873\n",
+            "50000/50000 [==============================] - 49s 971us/step - loss: 1.4720 - acc: 0.4750\n",
             "Epoch 2/30\n",
-            "50000/50000 [==============================] - 39s 788us/step - loss: 0.9631 - acc: 0.6636\n",
+            "50000/50000 [==============================] - 42s 834us/step - loss: 1.0189 - acc: 0.6417\n",
             "Epoch 3/30\n",
-            "50000/50000 [==============================] - 39s 787us/step - loss: 0.8013 - acc: 0.7216\n",
+            "50000/50000 [==============================] - 42s 832us/step - loss: 0.8482 - acc: 0.7052\n",
             "Epoch 4/30\n",
-            "50000/50000 [==============================] - 39s 772us/step - loss: 0.7115 - acc: 0.7569\n",
+            "50000/50000 [==============================] - 41s 823us/step - loss: 0.7375 - acc: 0.7450\n",
             "Epoch 5/30\n",
-            "50000/50000 [==============================] - 38s 769us/step - loss: 0.6383 - acc: 0.7806\n",
+            "50000/50000 [==============================] - 40s 809us/step - loss: 0.6570 - acc: 0.7723\n",
             "Epoch 6/30\n",
-            "50000/50000 [==============================] - 39s 770us/step - loss: 0.5692 - acc: 0.8030\n",
+            "50000/50000 [==============================] - 40s 795us/step - loss: 0.5922 - acc: 0.7959\n",
             "Epoch 7/30\n",
-            "50000/50000 [==============================] - 39s 771us/step - loss: 0.5178 - acc: 0.8237\n",
+            "50000/50000 [==============================] - 39s 786us/step - loss: 0.5416 - acc: 0.8123\n",
             "Epoch 8/30\n",
-            "50000/50000 [==============================] - 38s 769us/step - loss: 0.4665 - acc: 0.8358\n",
+            "50000/50000 [==============================] - 39s 783us/step - loss: 0.4837 - acc: 0.8336\n",
             "Epoch 9/30\n",
-            "50000/50000 [==============================] - 38s 768us/step - loss: 0.4279 - acc: 0.8529\n",
+            "50000/50000 [==============================] - 39s 782us/step - loss: 0.4373 - acc: 0.8490\n",
             "Epoch 10/30\n",
-            "50000/50000 [==============================] - 39s 771us/step - loss: 0.3902 - acc: 0.8640\n",
+            "50000/50000 [==============================] - 40s 795us/step - loss: 0.4055 - acc: 0.8577\n",
             "Epoch 11/30\n",
-            "50000/50000 [==============================] - 38s 762us/step - loss: 0.3550 - acc: 0.8768\n",
+            "50000/50000 [==============================] - 40s 791us/step - loss: 0.3641 - acc: 0.8739\n",
             "Epoch 12/30\n",
-            "50000/50000 [==============================] - 39s 771us/step - loss: 0.3325 - acc: 0.8852\n",
+            "50000/50000 [==============================] - 36s 723us/step - loss: 0.3394 - acc: 0.8806\n",
             "Epoch 13/30\n",
-            "50000/50000 [==============================] - 38s 766us/step - loss: 0.3041 - acc: 0.8938\n",
+            "50000/50000 [==============================] - 36s 711us/step - loss: 0.3156 - acc: 0.8904\n",
             "Epoch 14/30\n",
-            "50000/50000 [==============================] - 38s 768us/step - loss: 0.2830 - acc: 0.9017\n",
+            "50000/50000 [==============================] - 35s 709us/step - loss: 0.2910 - acc: 0.8988\n",
             "Epoch 15/30\n",
-            "50000/50000 [==============================] - 38s 768us/step - loss: 0.2642 - acc: 0.9062\n",
+            "50000/50000 [==============================] - 35s 706us/step - loss: 0.2714 - acc: 0.9052\n",
             "Epoch 16/30\n",
-            "50000/50000 [==============================] - 38s 769us/step - loss: 0.2444 - acc: 0.9144\n",
+            "50000/50000 [==============================] - 35s 706us/step - loss: 0.2574 - acc: 0.9117\n",
             "Epoch 17/30\n",
-            "50000/50000 [==============================] - 38s 768us/step - loss: 0.2323 - acc: 0.9183\n",
+            "50000/50000 [==============================] - 35s 708us/step - loss: 0.2379 - acc: 0.9173\n",
             "Epoch 18/30\n",
-            "50000/50000 [==============================] - 39s 771us/step - loss: 0.2182 - acc: 0.9240\n",
+            "50000/50000 [==============================] - 35s 705us/step - loss: 0.2237 - acc: 0.9221\n",
             "Epoch 19/30\n",
-            "50000/50000 [==============================] - 38s 756us/step - loss: 0.2101 - acc: 0.9262\n",
+            "50000/50000 [==============================] - 35s 704us/step - loss: 0.2126 - acc: 0.9250\n",
             "Epoch 20/30\n",
-            "50000/50000 [==============================] - 38s 752us/step - loss: 0.1992 - acc: 0.9309\n",
+            "50000/50000 [==============================] - 35s 704us/step - loss: 0.2014 - acc: 0.9292\n",
             "Epoch 21/30\n",
-            "50000/50000 [==============================] - 38s 753us/step - loss: 0.1886 - acc: 0.9349\n",
+            "50000/50000 [==============================] - 35s 705us/step - loss: 0.1928 - acc: 0.9333\n",
             "Epoch 22/30\n",
-            "50000/50000 [==============================] - 38s 751us/step - loss: 0.1766 - acc: 0.9383\n",
+            "50000/50000 [==============================] - 35s 706us/step - loss: 0.1813 - acc: 0.9372\n",
             "Epoch 23/30\n",
-            "50000/50000 [==============================] - 38s 751us/step - loss: 0.1669 - acc: 0.9414\n",
+            "50000/50000 [==============================] - 35s 705us/step - loss: 0.1744 - acc: 0.9389\n",
             "Epoch 24/30\n",
-            "50000/50000 [==============================] - 38s 753us/step - loss: 0.1617 - acc: 0.9447\n",
+            "50000/50000 [==============================] - 35s 707us/step - loss: 0.1682 - acc: 0.9419\n",
             "Epoch 25/30\n",
-            "50000/50000 [==============================] - 38s 751us/step - loss: 0.1529 - acc: 0.9474\n",
+            "50000/50000 [==============================] - 35s 706us/step - loss: 0.1570 - acc: 0.9455\n",
             "Epoch 26/30\n",
-            "50000/50000 [==============================] - 38s 759us/step - loss: 0.1505 - acc: 0.9488\n",
+            "50000/50000 [==============================] - 35s 706us/step - loss: 0.1546 - acc: 0.9462\n",
             "Epoch 27/30\n",
-            "50000/50000 [==============================] - 38s 762us/step - loss: 0.1465 - acc: 0.9491\n",
+            "50000/50000 [==============================] - 35s 705us/step - loss: 0.1459 - acc: 0.9494\n",
             "Epoch 28/30\n",
-            "50000/50000 [==============================] - 38s 759us/step - loss: 0.1359 - acc: 0.9537\n",
+            "50000/50000 [==============================] - 35s 705us/step - loss: 0.1439 - acc: 0.9496\n",
             "Epoch 29/30\n",
-            "50000/50000 [==============================] - 38s 754us/step - loss: 0.1291 - acc: 0.9558\n",
+            "50000/50000 [==============================] - 35s 705us/step - loss: 0.1370 - acc: 0.9532\n",
             "Epoch 30/30\n",
-            "50000/50000 [==============================] - 38s 752us/step - loss: 0.1313 - acc: 0.9553\n"
+            "50000/50000 [==============================] - 35s 706us/step - loss: 0.1361 - acc: 0.9539\n"
           ],
           "name": "stdout"
         },
@@ -425,7 +425,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f4ed333c860>"
+              "<keras.callbacks.History at 0x7ff41afcada0>"
             ]
           },
           "metadata": {
@@ -439,7 +439,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "7e02H4CtQP--",
-        "outputId": "6a4a276f-fcdf-4834-9875-8790bb9ef2c0",
+        "outputId": "716c52ad-5eed-4750-92ab-a2b9b2070f15",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -451,13 +451,13 @@
         "\n",
         "print('Test accuracy:', test_acc)"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "10000/10000 [==============================] - 2s 249us/step\n",
-            "Test accuracy: 0.8371\n"
+            "10000/10000 [==============================] - 2s 231us/step\n",
+            "Test accuracy: 0.8376\n"
           ],
           "name": "stdout"
         }
@@ -467,7 +467,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "AwSBtIuHQP_B",
-        "outputId": "3c412045-5918-455a-d90b-60a78c49cf95",
+        "outputId": "2329d991-380c-43f9-ff2c-e38049247c93",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -478,15 +478,15 @@
         "predictions = model.predict(test_images)\n",
         "predictions[0]"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([3.0025037e-06, 3.4469240e-06, 5.9425853e-05, 9.9902618e-01,\n",
-              "       1.1519688e-05, 7.2404312e-04, 6.1119703e-05, 9.0239190e-08,\n",
-              "       1.0713305e-04, 4.1155918e-06], dtype=float32)"
+              "array([3.1385177e-03, 2.7101072e-03, 1.1431597e-03, 2.2648644e-01,\n",
+              "       5.3070230e-06, 7.6576275e-01, 4.8682748e-04, 7.8605510e-05,\n",
+              "       4.4775978e-05, 1.4342695e-04], dtype=float32)"
             ]
           },
           "metadata": {
@@ -500,7 +500,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "KZccA8YFQP_F",
-        "outputId": "a4b5e297-892e-4012-dd2a-76fffe91d372",
+        "outputId": "1534fcb9-dfcd-444d-c5e2-44bc7e354464",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -510,13 +510,13 @@
       "source": [
         "class_names[np.argmax(predictions[0])]"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'cat'"
+              "'dog'"
             ]
           },
           "metadata": {
@@ -530,7 +530,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "KRqqi2onQP_H",
-        "outputId": "00f8457a-ea49-42e9-c135-13b3e95c135c",
+        "outputId": "a17075a3-795b-4a2f-ae40-e84933d9d155",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -540,13 +540,13 @@
       "source": [
         "predictions[0].sum()"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.0000001"
+              "0.9999999"
             ]
           },
           "metadata": {
@@ -560,7 +560,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "sUKx022HQP_N",
-        "outputId": "d286dda3-ec88-4f85-cc34-6f64fc04a038",
+        "outputId": "66ad2f0d-9b58-43c3-b2db-b4235344b295",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 968
@@ -570,7 +570,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
