--- a/keras/CNN_coil_20.ipynb
+++ b/keras/CNN_coil_20.ipynb
@@ -23,7 +23,7 @@
       },
       "cell_type": "code",
       "source": [
-        "!wget 'http://www.cs.columbia.edu/CAVE/databases/SLAM_coil-20_coil-100/coil-20/coil-20-proc.zip'\n",
+        "!wget -nc 'http://www.cs.columbia.edu/CAVE/databases/SLAM_coil-20_coil-100/coil-20/coil-20-proc.zip'\n",
         "!unzip coil-20-proc.zip"
       ],
       "execution_count": 0,
@@ -64,7 +64,7 @@
         "plt.imshow(img_cvt, cmap='gray')\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -94,7 +94,7 @@
       "source": [
         "img_cvt.shape"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -127,7 +127,7 @@
         "files = [name for name in os.listdir(FOLDER) if name.endswith('png')]\n",
         "len(files)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +184,7 @@
         "plt.imshow(data[2], cmap='gray')\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -220,7 +220,7 @@
         "    plt.grid(False)\n",
         "    plt.imshow(data[i], cmap='gray')\n"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -256,7 +256,7 @@
         "    plt.grid(False)\n",
         "    plt.imshow(data[72 + i], cmap='gray')"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -300,7 +300,7 @@
         "import keras\n",
         "from keras.layers import *"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,11 +338,11 @@
       "metadata": {
         "id": "GdmMBjQy1HyN",
         "colab_type": "code",
+        "outputId": "9715edb4-a129-4ee7-d571-bac2601daa4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 89
-        },
-        "outputId": "9715edb4-a129-4ee7-d571-bac2601daa4c"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -351,7 +351,7 @@
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,7 +381,7 @@
         "train_images = train_images.reshape(train_images.shape[0], IMG_SIZE, IMG_SIZE, 1)\n",
         "train_images.shape"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,7 @@
         "train_labels = np.fromfunction(lambda i : i // 72, (train_images.shape[0],), dtype=int)\n",
         "train_labels.shape\n"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +442,7 @@
       "source": [
         "model.fit(train_images, train_labels, epochs=20)  "
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
